fix: align network avatar to tokenlist subtitle

--- a/ui/components/component-library/avatar-network/avatar-network.scss
+++ b/ui/components/component-library/avatar-network/avatar-network.scss
@@ -5,7 +5,6 @@
 
   &__network-image {
     width: 100%;
-    scale: 1.4;
 
     &--blurred {
       filter: blur(8px);
