--- a/ui/components/component-library/badge-wrapper/badge-wrapper.scss
+++ b/ui/components/component-library/badge-wrapper/badge-wrapper.scss
@@ -33,7 +33,7 @@
 
 .mm-badge-wrapper {
   --badge-wrapper-position-circular: 7%;
-  --badge-wrapper-position-rectangular: 0;
+  --badge-wrapper-position-rectangular: 11%;
 
   position: relative;
   align-self: start; // prevents stretching of badge-wrapper when in flexbox container to maintain badge positioning
